--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>v-bucks</h1>
-        <img id="clickButton" src="v-bucs.JPG" alt="Click me!" class="clickable-image">
+        <img id="clickButton" src="V-bucs.JPG" alt="Click me!" class="clickable-image">
         <p>Счетчик: <span id="counter">0</span></p>
         <p>Мощность клика: <span id="clickPower">1</span></p>
         <button id="upgradeButton">Улучшить клик (стоимость: <span id="upgradeCost">300</span>)</button>
